# Image-Processor

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  main.cpp  router.cpp  start_server.bat  start_server.ps1  test_server.py  web_server.cpp
backend/Crow/: CMakeLists.txt
backend/include/: ApiListener.hpp  Image.hpp  ImageEncoder.hpp  base64.h
backend/include/backend_router/: BackendRouter.hpp
backend/include/custom_types/: Types.hpp
backend/include/image_handling/: Image.hpp
backend/include/web/: ApiListener.hpp
backend/src/: ApiListener.cpp  Image.cpp  base64.cpp
backend/src/backend_router/: BackendRouter.cpp
backend/src/image_handling/: ImageEncoder.cpp
backend/src/web/: ApiListener.cpp
backend/test_images/: README.md
frontend/: index.html  main.js  main.ts
include/: Image.hpp
src/: Image.cpp
